--- a/app/src/main/res/layout/activity_select_user.xml
+++ b/app/src/main/res/layout/activity_select_user.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -23,7 +22,7 @@
             android:paddingEnd="10dp"
             android:paddingStart="10dp">
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/target_user_name_input_area"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -39,13 +38,11 @@
                 android:text="@string/button_start_text" />
         </LinearLayout>
 
-        <TextView
+        <com.airbnb.epoxy.EpoxyRecyclerView
             android:id="@+id/show_area_repository"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/input_area"
-            android:orientation="vertical"
-            android:text="@{viewModel.resultField}" />
+            android:layout_below="@+id/input_area" />
 
     </RelativeLayout>
 </layout>
