--- a/app/src/main/res/layout/layout_repository_item.xml
+++ b/app/src/main/res/layout/layout_repository_item.xml
@@ -13,6 +13,7 @@
     </data>
 
     <LinearLayout
+        android:background="@drawable/repository_item_stroke"
         android:id="@+id/repository_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
