--- a/app/src/main/res/menu/menu_select_user.xml
+++ b/app/src/main/res/menu/menu_select_user.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.matsunaopen.repositoryviewer.view.RepositoryActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/setting_action_switch_mock"
+        android:title="@string/setting_mock_state_off"/>
+    <item
+        android:id="@+id/setting_action_clear_db"
+        android:title="@string/setting_clear_db"/>
 </menu>
